# titanio-rust-telegram-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: dependency-check.yml
scripts/: build.sh  check-updates.sh  install-cargo-tools.sh  run.sh  stop.sh  update-deps.sh
src/: main.rs
src/commands/: about.rs  currency.rs  echo.rs  help.rs  id.rs  joke.rs  mod.rs  ping.rs  time.rs  unrecognized.rs  weather.rs
src/commands/fallback/: mod.rs  unknown_command.rs
src/commands/fun/: joke.rs  mod.rs  roll.rs
src/commands/info/: about.rs  help.rs  id.rs  mod.rs
src/commands/system/: mod.rs  ping.rs  start.rs
src/commands/utils/: currency.rs  mod.rs  weather.rs
src/fallback/: mod.rs  unknown_command.rs
src/services/: error.rs  mod.rs  models.rs
