[package]
name = "titanio-rust-telegram-bot"
version = "0.1.0"
edition = "2024"
authors = ["LoboGuardian"]
description = "A Telegram bot written in Rust using teloxide"
repository = "https://github.com/LoboGuardian/titanio-rust-telegram-bot"

license = "MIT"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version =  "1.44.2", features = ["rt-multi-thread", "macros"] }
